# simplyR

./: .gitmodules  Cargo.toml  README.md
.github/workflows/: ci.yml
rust-matching-lib/: Cargo.toml
rust-matching-lib/src/: lib.rs
simplyr-lib/: Cargo.toml
simplyr-lib/src/: lib.rs
src/: lib.rs  main.rs
