[package]
name = "simplyr-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.147", default-features = false, features=["derive", "alloc"] }
serde_json = { version = "1.0.87", default-features = false, features=["alloc"] }
codec = { version = "3.0.0", package = "parity-scale-codec", default-features = false, features = ["derive", "full"] }
libm = "0.2.6"
